added Leave request validation strategy updated leave request service added swagger docs
